TZ.DataAnalyzer.Script/AScriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from AScript.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class AScriptParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, LBAGG=29, SELECT=30, GROUPBY=31, 
		CUBE=32, ROLLUP=33, FILTER=34, SORT=35, JOIN=36, ORDERBY=37, CONDITIONOPERATOR=38, 
		DATEFUNCTION=39, DATEUDF=40, STRINGUDF=41, NUMBERUDF=42, JOINTYPE=43, 
		DECLARTYPE=44, AGGRE=45, DATATYPE=46, WEEK=47, OPER=48, SPLITER=49, INT=50, 
		DOUBLE=51, WORD=52, LFSBRKT=53, RFSBRKT=54, LFBRKT=55, RFBRKT=56, DOT=57, 
		STRING_LITERAL=58, AGGGROUP=59, SAYS=60, EOS=61, TEXT=62, WHITESPACE=63, 
		WS=64;
	public const int
		RULE_statement = 0, RULE_line = 1, RULE_var = 2, RULE_strfield = 3, RULE_strvalue = 4, 
		RULE_strreplacevalue = 5, RULE_dr = 6, RULE_ns = 7, RULE_nsp = 8, RULE_imptext = 9, 
		RULE_imp = 10, RULE_nullreplace = 11, RULE_stringreplace = 12, RULE_nadrop = 13, 
		RULE_data = 14, RULE_dataformat = 15, RULE_comparedate = 16, RULE_adddate = 17, 
		RULE_datediff = 18, RULE_monthadd = 19, RULE_monthbetween = 20, RULE_next = 21, 
		RULE_formatingstring = 22, RULE_todate = 23, RULE_totime = 24, RULE_dateformat = 25, 
		RULE_datefunction = 26, RULE_dateadvancefunction = 27, RULE_stringfunction = 28, 
		RULE_stringformat = 29, RULE_numberfunction = 30, RULE_numberformat = 31, 
		RULE_strings = 32, RULE_stringltr = 33, RULE_fields = 34, RULE_sel = 35, 
		RULE_gp = 36, RULE_eos = 37, RULE_dataframe = 38, RULE_flt = 39, RULE_param = 40, 
		RULE_todata = 41, RULE_dataitem = 42, RULE_load = 43, RULE_export = 44, 
		RULE_sort = 45, RULE_dist = 46, RULE_isall = 47, RULE_limit = 48, RULE_intersect = 49, 
		RULE_except = 50, RULE_union = 51, RULE_drop = 52, RULE_newcase = 53, 
		RULE_joincase = 54, RULE_multicase = 55, RULE_multiwhen = 56, RULE_newcolumn = 57, 
		RULE_context = 58, RULE_conlit = 59, RULE_concatstate = 60, RULE_concatcolumn = 61, 
		RULE_withcolumn = 62, RULE_path = 63, RULE_cube = 64, RULE_rollup = 65, 
		RULE_select = 66, RULE_groupby = 67, RULE_filtercondition = 68, RULE_sortstatement = 69, 
		RULE_join = 70, RULE_multijoin = 71, RULE_relation = 72, RULE_aggtype = 73, 
		RULE_joindata = 74, RULE_joinfield = 75, RULE_joinedfield = 76, RULE_joineddata = 77, 
		RULE_declare = 78, RULE_datafields = 79, RULE_order = 80, RULE_condition = 81, 
		RULE_agg = 82, RULE_selectsort = 83, RULE_limitvalue = 84, RULE_schema = 85, 
		RULE_schemaname = 86;
	public static readonly string[] ruleNames = {
		"statement", "line", "var", "strfield", "strvalue", "strreplacevalue", 
		"dr", "ns", "nsp", "imptext", "imp", "nullreplace", "stringreplace", "nadrop", 
		"data", "dataformat", "comparedate", "adddate", "datediff", "monthadd", 
		"monthbetween", "next", "formatingstring", "todate", "totime", "dateformat", 
		"datefunction", "dateadvancefunction", "stringfunction", "stringformat", 
		"numberfunction", "numberformat", "strings", "stringltr", "fields", "sel", 
		"gp", "eos", "dataframe", "flt", "param", "todata", "dataitem", "load", 
		"export", "sort", "dist", "isall", "limit", "intersect", "except", "union", 
		"drop", "newcase", "joincase", "multicase", "multiwhen", "newcolumn", 
		"context", "conlit", "concatstate", "concatcolumn", "withcolumn", "path", 
		"cube", "rollup", "select", "groupby", "filtercondition", "sortstatement", 
		"join", "multijoin", "relation", "aggtype", "joindata", "joinfield", "joinedfield", 
		"joineddata", "declare", "datafields", "order", "condition", "agg", "selectsort", 
		"limitvalue", "schema", "schemaname"
	};

	private static readonly string[] _LiteralNames = {
		null, "':'", "';'", "'dataroot'", "'namespace'", "'namespaceparam'", "','", 
		"'import'", "'nullrep'", "'textrep'", "'nulldrop'", "'@'", "'#'", "'todc'", 
		"'load'", "'fields'", "'export'", "'distinct'", "'all'", "'limit'", "'intersect'", 
		"'except'", "'union'", "'drop'", "'==='", "'when'", "'new'", "'='", "'table'", 
		"'Agg'", "'select'", "'groupby'", "'cube'", "'rollup'", "'search'", "'sortby'", 
		"'join'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "LBAGG", "SELECT", "GROUPBY", "CUBE", "ROLLUP", 
		"FILTER", "SORT", "JOIN", "ORDERBY", "CONDITIONOPERATOR", "DATEFUNCTION", 
		"DATEUDF", "STRINGUDF", "NUMBERUDF", "JOINTYPE", "DECLARTYPE", "AGGRE", 
		"DATATYPE", "WEEK", "OPER", "SPLITER", "INT", "DOUBLE", "WORD", "LFSBRKT", 
		"RFSBRKT", "LFBRKT", "RFBRKT", "DOT", "STRING_LITERAL", "AGGGROUP", "SAYS", 
		"EOS", "TEXT", "WHITESPACE", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "AScript.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static AScriptParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public AScriptParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public AScriptParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class StatementContext : ParserRuleContext {
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAScriptListener typedListener = listener as IAScriptListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAScriptListener typedListener = listener as IAScriptListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAScriptVisitor<TResult> typedVisitor = visitor as IAScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 0, RULE_statement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 177;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__6) | (1L << DECLARTYPE) | (1L << WORD))) != 0)) {
				{
				{
				State = 174; line();
				}
				}
				State = 179;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
	public List<string> Errors { get; set; }
	public override void NotifyErrorListeners(IToken offendingToken, string msg, RecognitionException e)
	{
		if (Errors == null)
		{
			Errors = new List<string>();
		}
		Errors.Add("Error:" + msg + " at " + offendingToken.Line);
		base.NotifyErrorListeners(offendingToken, msg, e);
	}
	public partial class LineContext : ParserRuleContext {
		public VarContext var() {
			return GetRuleContext<VarContext>(0);
		}
		public DataContext data() {
			return GetRuleContext<DataContext>(0);
		}
		public ITerminalNode DOT() { return GetToken(AScriptParser.DOT, 0); }
		public SelContext sel() {
			return GetRuleContext<SelContext>(0);
		}
		public SelectContext select() {
			return GetRuleContext<SelectContext>(0);
		}
		public GpContext gp() {
			return GetRuleContext<GpContext>(0);
		}
		public GroupbyContext groupby() {
			return GetRuleContext<GroupbyContext>(0);
		}
		public ITerminalNode JOIN() { return GetToken(AScriptParser.JOIN, 0); }
		public ITerminalNode LFBRKT() { return GetToken(AScriptParser.LFBRKT, 0); }
		public JoinContext join() {
			return GetRuleContext<JoinContext>(0);
		}
		public ITerminalNode RFBRKT() { return GetToken(AScriptParser.RFBRKT, 0); }
		public ITerminalNode CUBE() { return GetToken(AScriptParser.CUBE, 0); }
		public CubeContext cube() {
			return GetRuleContext<CubeContext>(0);
		}
		public ITerminalNode ROLLUP() { return GetToken(AScriptParser.ROLLUP, 0); }
		public RollupContext rollup() {
			return GetRuleContext<RollupContext>(0);
		}
		public DistContext dist() {
			return GetRuleContext<DistContext>(0);
		}
		public LimitContext limit() {
			return GetRuleContext<LimitContext>(0);
		}
		public UnionContext union() {
			return GetRuleContext<UnionContext>(0);
		}
		public IntersectContext intersect() {
			return GetRuleContext<IntersectContext>(0);
		}
		public ExceptContext except() {
			return GetRuleContext<ExceptContext>(0);
		}
		public DropContext drop() {
			return GetRuleContext<DropContext>(0);
		}
		public WithcolumnContext withcolumn() {
			return GetRuleContext<WithcolumnContext>(0);
		}
		public LoadContext load() {
			return GetRuleContext<LoadContext>(0);
		}
		public FilterconditionContext filtercondition() {
			return GetRuleContext<FilterconditionContext>(0);
		}
		public SortstatementContext sortstatement() {
			return GetRuleContext<SortstatementContext>(0);
		}
		public ExportContext export() {
			return GetRuleContext<ExportContext>(0);
		}
		public NullreplaceContext nullreplace() {
			return GetRuleContext<NullreplaceContext>(0);
		}
		public StringreplaceContext stringreplace() {
			return GetRuleContext<StringreplaceContext>(0);
		}
		public NadropContext nadrop() {
			return GetRuleContext<NadropContext>(0);
		}
		public DeclareContext declare() {
			return GetRuleContext<DeclareContext>(0);
		}
		public ParamContext param() {
			return GetRuleContext<ParamContext>(0);
		}
		public ITerminalNode TEXT() { return GetToken(AScriptParser.TEXT, 0); }
		public TodataContext todata() {
			return GetRuleContext<TodataContext>(0);
		}
		public DrContext dr() {
			return GetRuleContext<DrContext>(0);
		}
		public PathContext path() {
			return GetRuleContext<PathContext>(0);
		}
		public NsContext ns() {
			return GetRuleContext<NsContext>(0);
		}
		public NspContext nsp() {
			return GetRuleContext<NspContext>(0);
		}
		public ImpContext imp() {
			return GetRuleContext<ImpContext>(0);
		}
		public ImptextContext imptext() {
			return GetRuleContext<ImptextContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAScriptListener typedListener = listener as IAScriptListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAScriptListener typedListener = listener as IAScriptListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAScriptVisitor<TResult> typedVisitor = visitor as IAScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 2, RULE_line);
		try {
			State = 357;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 180; var();
				State = 181; Match(T__0);
				State = 182; data();
				State = 183; Match(DOT);
				State = 184; sel();
				State = 185; select();
				State = 186; Match(T__1);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 188; var();
				State = 189; Match(T__0);
				State = 190; data();
				State = 191; Match(DOT);
				State = 192; gp();
				State = 193; groupby();
				State = 194; Match(T__1);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 196; var();
				State = 197; Match(T__0);
				State = 198; data();
				State = 199; Match(DOT);
				State = 200; Match(JOIN);
				State = 201; Match(LFBRKT);
				State = 202; join();
				State = 203; Match(RFBRKT);
				State = 204; Match(T__1);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 206; var();
				State = 207; Match(T__0);
				State = 208; data();
				State = 209; Match(DOT);
				State = 210; Match(CUBE);
				State = 211; cube();
				State = 212; Match(T__1);
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 214; var();
				State = 215; Match(T__0);
				State = 216; data();
				State = 217; Match(DOT);
				State = 218; Match(ROLLUP);
				State = 219; rollup();
				State = 220; Match(T__1);
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 222; var();
				State = 223; Match(T__0);
				State = 224; data();
				State = 225; Match(DOT);
				State = 226; dist();
				State = 227; Match(T__1);
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 229; var();
				State = 230; Match(T__0);
				State = 231; data();
				State = 232; Match(DOT);
				State = 233; limit();
				State = 234; Match(T__1);
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 236; var();
				State = 237; Match(T__0);
				State = 238; data();
				State = 239; Match(DOT);
				State = 240; union();
				State = 241; Match(T__1);
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 243; var();
				State = 244; Match(T__0);
				State = 245; data();
				State = 246; Match(DOT);
				State = 247; intersect();
				State = 248; Match(T__1);
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 250; var();
				State = 251; Match(T__0);
				State = 252; data();
				State = 253; Match(DOT);
				State = 254; except();
				State = 255; Match(T__1);
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 257; var();
				State = 258; Match(T__0);
				State = 259; data();
				State = 260; Match(DOT);
				State = 261; drop();
				State = 262; Match(T__1);
				}
				break;
			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 264; var();
				State = 265; Match(T__0);
				State = 266; data();
				State = 267; Match(DOT);
				State = 268; withcolumn();
				State = 269; Match(T__1);
				}
				break;
			case 13:
				EnterOuterAlt(_localctx, 13);
				{
				State = 271; var();
				State = 272; Match(T__0);
				State = 273; load();
				State = 274; Match(T__1);
				}
				break;
			case 14:
				EnterOuterAlt(_localctx, 14);
				{
				State = 276; var();
				State = 277; Match(T__0);
				State = 278; data();
				State = 279; filtercondition();
				State = 280; Match(T__1);
				}
				break;
			case 15:
				EnterOuterAlt(_localctx, 15);
				{
				State = 282; var();
				State = 283; Match(T__0);
				State = 284; data();
				State = 285; sortstatement();
				State = 286; Match(T__1);
				}
				break;
			case 16:
				EnterOuterAlt(_localctx, 16);
				{
				State = 288; var();
				State = 289; Match(T__0);
				State = 290; data();
				State = 291; Match(DOT);
				State = 292; export();
				State = 293; Match(T__1);
				}
				break;
			case 17:
				EnterOuterAlt(_localctx, 17);
				{
				State = 295; var();
				State = 296; Match(T__0);
				State = 297; data();
				State = 298; Match(DOT);
				State = 299; nullreplace();
				State = 300; Match(T__1);
				}
				break;
			case 18:
				EnterOuterAlt(_localctx, 18);
				{
				State = 302; var();
				State = 303; Match(T__0);
				State = 304; data();
				State = 305; Match(DOT);
				State = 306; stringreplace();
				State = 307; Match(T__1);
				}
				break;
			case 19:
				EnterOuterAlt(_localctx, 19);
				{
				State = 309; var();
				State = 310; Match(T__0);
				State = 311; data();
				State = 312; Match(DOT);
				State = 313; nadrop();
				State = 314; Match(T__1);
				}
				break;
			case 20:
				EnterOuterAlt(_localctx, 20);
				{
				State = 316; declare();
				State = 317; Match(T__0);
				State = 318; var();
				State = 319; Match(T__0);
				State = 320; param();
				State = 321; Match(T__1);
				}
				break;
			case 21:
				EnterOuterAlt(_localctx, 21);
				{
				State = 323; declare();
				State = 324; Match(T__0);
				State = 325; var();
				State = 326; Match(T__0);
				State = 327; Match(TEXT);
				State = 328; Match(T__1);
				}
				break;
			case 22:
				EnterOuterAlt(_localctx, 22);
				{
				State = 330; declare();
				State = 331; Match(T__0);
				State = 332; var();
				State = 333; Match(T__0);
				State = 334; todata();
				State = 335; Match(T__1);
				}
				break;
			case 23:
				EnterOuterAlt(_localctx, 23);
				{
				State = 337; dr();
				State = 338; Match(T__0);
				State = 339; path();
				State = 340; Match(T__1);
				}
				break;
			case 24:
				EnterOuterAlt(_localctx, 24);
				{
				State = 342; ns();
				State = 343; Match(T__0);
				State = 344; Match(TEXT);
				State = 345; Match(T__1);
				}
				break;
			case 25:
				EnterOuterAlt(_localctx, 25);
				{
				State = 347; nsp();
				State = 348; Match(T__0);
				State = 349; param();
				State = 350; Match(T__1);
				}
				break;
			case 26:
				EnterOuterAlt(_localctx, 26);
				{
				State = 352; imp();
				State = 353; Match(T__0);
				State = 354; imptext();
				State = 355; Match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarContext : ParserRuleContext {
		public ITerminalNode WORD() { return GetToken(AScriptParser.WORD, 0); }
		public VarContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_var; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAScriptListener typedListener = listener as IAScriptListener;
			if (typedListener != null) typedListener.EnterVar(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAScriptListener typedListener = listener as IAScriptListener;
			if (typedListener != null) typedListener.ExitVar(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAScriptVisitor<TResult> typedVisitor = visitor as IAScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVar(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VarContext var() {
		VarContext _localctx = new VarContext(Context, State);
		EnterRule(_localctx, 4, RULE_var);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 359; Match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StrfieldContext : ParserRuleContext {
		public ITerminalNode WORD() { return GetToken(AScriptParser.WORD, 0); }
		public StrfieldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_strfield; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAScriptListener typedListener = listener as IAScriptListener;
			if (typedListener != null) typedListener.EnterStrfield(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAScriptListener typedListener = listener as IAScriptListener;
			if (typedListener != null) typedListener.ExitStrfield(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAScriptVisitor<TResult> typedVisitor = visitor as IAScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStrfield(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StrfieldContext strfield() {
		StrfieldContext _localctx = new StrfieldContext(Context, State);
		EnterRule(_localctx, 6, RULE_strfield);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 361; Match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StrvalueContext : ParserRuleContext {
		public ITerminalNode TEXT() { return GetToken(AScriptParser.TEXT, 0); }
		public StrvalueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_strvalue; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAScriptListener typedListener = listener as IAScriptListener;
			if (typedListener != null) typedListener.EnterStrvalue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAScriptListener typedListener = listener as IAScriptListener;
			if (typedListener != null) typedListener.ExitStrvalue(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAScriptVisitor<TResult> typedVisitor = visitor as IAScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStrvalue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StrvalueContext strvalue() {
		StrvalueContext _localctx = new StrvalueContext(Context, State);
		EnterRule(_localctx, 8, RULE_strvalue);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 363; Match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
